# dapl-labs

./: LICENSE
Clipl/: CMakeLists.txt  README.md
Clipl/Clipl/: Base.hpp  CMakeLists.txt
Clipl/Clipl/Grammar/: README.md
Clipl/Clipl/Grammar/AST/: AST.hpp  ForwardDecl.hpp
Clipl/Clipl/Grammar/AST/Base/: ASTNode.hpp
Clipl/Clipl/Grammar/AST/Expression/: AccessExpression.hpp  AdditiveExpression.hpp  AndExpression.hpp  ArgumentExpressionList.hpp  AssignmentExpression.hpp  AssignmentOperator.hpp  CallExpression.hpp  CastExpression.hpp  CastTypenameExpression.hpp  CastUnaryExpression.hpp  ConditionalAssignmentExpression.hpp  ConditionalExpression.hpp  ConstantExpression.hpp  EqualityExpression.hpp  ExclusiveOrExpression.hpp  Expression.hpp  IdentPrimaryExpression.hpp  IncDecPostfixExpression.hpp  IncDecPrefixExpression.hpp  InclusiveOrExpression.hpp  IndexExpression.hpp  LogicalAndExpression.hpp  LogicalOrExpression.hpp  MultiplicativeExpression.hpp  NestedPrimaryExpression.hpp  NumberPrimaryExpression.hpp  OperatorUnaryExpression.hpp  PostfixExpression.hpp  PrimaryExpression.hpp  RelationalExpression.hpp  ShiftExpression.hpp  SizeofTypenameExpression.hpp  SizeofUnaryExpression.hpp  UnaryAssignExpression.hpp  UnaryExpression.hpp  UnaryOperator.hpp
Clipl/Clipl/Grammar/AST/Program/: AbstractDeclarator.hpp  ArrayDirectAbstractDeclarator.hpp  ArrayDirectDeclarator.hpp  BaseDeclarator.hpp  BasicKeywordSpecifier.hpp  Declaration.hpp  DeclarationList.hpp  DeclarationSpecifiers.hpp  Declarator.hpp  DirectAbstractDeclarator.hpp  DirectDeclarator.hpp  EnumSpecifier.hpp  Enumerator.hpp  EnumeratorList.hpp  ExpressionInitializer.hpp  (+35 more)
Clipl/Clipl/Grammar/Driver/: Driver.cpp  Driver.hpp
Clipl/Clipl/Grammar/Lexer/: Lexer.hpp  Lexer.l  LexerInternal.hpp
Clipl/Clipl/Grammar/Parser/: Parser.y
Clipl/Clipl/Logger/: Logger.cpp  Logger.hpp
Clipl/Clipl/Preprocessor/: CMakeLists.txt  Preprocessor.cpp  Preprocessor.hpp  README.md
Clipl/Clipl/Preprocessor/Lexer/: Lexer.hpp  Lexer.l  LexerInternal.hpp  Token.hpp
Clipl/Clipl/Preprocessor/Streams/: Streams.cpp  Streams.hpp
Clipl/Clipl/SymbolTable/: DotConverter.hpp  Scope.hpp  Symbol.hpp  SymbolList.hpp  SymbolTree.hpp
Clipl/Clipl/Type/: ArrayType.hpp  BasicType.hpp  ComplexType.hpp  EnumType.hpp  FunctionType.hpp  IntegerType.hpp  NodeType.hpp  PointerType.hpp  RealNumberType.hpp  StructType.hpp  Type.hpp  UnionType.hpp  VoidType.hpp
Clipl/Clipl/Visitor/: DotVisitor.hpp  Visitor.hpp
Clipl/play/: CMakeLists.txt  parse.cpp  preprocess.cpp  scopes.cpp
stack_machine/: CMakeLists.txt  README.md
stack_machine/play/: CMakeLists.txt  factorial.txt  play.cpp
stack_machine/stack_machine/: CMakeLists.txt
stack_machine/stack_machine/asm_compiler/: Compiler.cpp  Compiler.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.h
stack_machine/stack_machine/machine/: Instruction.h  InstructionExecutor.cpp  InstructionExecutor.h  Machine.cpp  Machine.h  Memory.h  MemoryContainer.cpp  MemoryContainer.h  Program.h  Registers.h  Stack.h
(+134 files in other folders)
